Se agrega monedero electronico con base al numero de celular del cliente